# pydantic_data_creator

./: LICENSE  README.md  pyproject.toml
example/: models.py
pydantic_data_creator/: cli.py  main.py
scripts/: run.py
