[tool.poetry]
name = "pydantic-data-creator"
version = "0.1.2"
description = ""
authors = ["yukikotani231 <kotani-yuki231@g.ecc.u-tokyo.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit-pydantic = "^0.6.0"
pydantic = "<2"


[tool.poetry.scripts]
pydcreator = "pydantic_data_creator.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
